Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(text)
        Test(v)
    end

    action Test(integer var)
    end
end
